# music-generator

./: .gitignore  App.cpp  App.h  AppInfo.h  AudioGenerator.cpp  AudioGenerator.h  AudioPlayerUI.cpp  AudioPlayerUI.h  AudioSettings.h  Button.cpp  Button.h  CMakeLists.txt  MusicGenerator.sln  MusicGenerator.vcxproj  MusicGenerator.vcxproj.filters  Random.h  SettingsUI.cpp  SettingsUI.h  UI.h  VisualAudio.cpp  VisualAudio.h  main.cpp
